// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for edit locations: alias field 1`] = `
<input
  class="ant-input"
  id="alias"
  placeholder="Enter team alias"
  type="text"
  value=""
/>
`;

exports[`renders correctly for edit locations: name field 1`] = `
<input
  class="ant-input"
  id="name"
  placeholder="Enter team name"
  type="text"
  value="OpenSRP web Test Organisation"
/>
`;

exports[`renders correctly for new organizations: alias field 1`] = `
<input
  class="ant-input"
  id="alias"
  placeholder="Enter team alias"
  type="text"
  value=""
/>
`;

exports[`renders correctly for new organizations: name field 1`] = `
<input
  class="ant-input"
  id="name"
  placeholder="Enter team name"
  type="text"
  value=""
/>
`;
